# apps.core.preloaded.libslp-memo

./: CMakeLists.txt  LICENSE  NOTICE  libslp-memo.manifest  memo.pc.in  project.config
debian/: changelog  control  libslp-memo-dev.install.in  libslp-memo.install.in  libslp-memo.postinst  rules
include/: db-helper.h  db-schema.h  db.h  memo-db.h  memo-log.h
packaging/: libslp-memo.changes  libslp-memo.spec
src/: db-helper.c  db.c  memo_dbif.c
