CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(memo C)

#IF($ENV{ARCH} MATCHES "arm")
#	MESSAGE("Architecture: $ENV{ARCH}")
#	SET(ENV{PKG_CONFIG_PATH} "/usr/x1/lib/pkgconfig:/opt/x1/lib/pkgconfig")
#	SET(CMAKE_C_COMPILER "arm-linux-gcc")
#	SET(CMAKE_CXX_COMPILER "arm-linux-g++")
#	SET(CMAKE_SKIP_BUILD_RPATH TRUE)
#	SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
#	SET(CMAKE_INSTALL_RPATH "/usr/x1/lib:/opt/x1/lib")
#	SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
#ENDIF($ENV{ARCH} MATCHES "arm")

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(LIBDIR "\${prefix}/lib")
SET(INCLUDEDIR "\${prefix}/include")
SET(VERSION 0.1.0)

SET(SRCS src/db.c 
         src/memo_dbif.c
         src/db-helper.c)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED db-util dlog vconf)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag} -Wall -Werror")
ENDFOREACH(flag)

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden")
#SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -finstrument-functions")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")
ADD_DEFINITIONS("-DFACTORYFS=\"$ENV{FACTORYFS}\"")
#ADD_DEFINITIONS("-DDEBUG")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${VERSION})

CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION lib/pkgconfig)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/memo-db.h DESTINATION include)
#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/memo.db DESTINATION /opt/dbspace RENAME .${PROJECT_NAME}.db)
#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/memo.db-journal DESTINATION /opt/dbspace RENAME .${PROJECT_NAME}.db-journal)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/.LIBSLP_MEMO_DB_CHANGED DESTINATION /opt/data/libslp-memo)

#ADD_SUBDIRECTORY(test)

